# Tarea2_SSOO

./: CMakeLists.txt  README.md
Paralela OpenPM/: README.md
Paralela Thread/: README.md  Thread.cpp
Secuencial/: README.md  Secuencial.cpp
